--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,13 @@
 header{
-    background-image: url('/images/cover.avif');
+    background-image: url('./images/cover.avif');
     height: 585px;
-    /* width: 1500px; */
+    width: 100%;
     background-repeat: no-repeat;
     text-align: center;
     color: white;
+    border: 2px solid red;
+    background-position: center;
+    background-size: cover;
 }
 
 h1{
