--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,16 +1,11 @@
-.img{
-    
+.image{
+   width: 100px; 
+   height: 100px;
+   border-radius: 50%;
+   border: 5px solid teal;
+   padding: 5px;
 }
 
 .flex{
     display: flex;
-}
-
-header{
-    background-color: gray;
-    text-align: center;
-    color: lightyellow;
-    padding: 10px;
-    margin: 20px;
-    border-radius: 10px;
 }
