--- a/styles/menu.css
+++ b/styles/menu.css
@@ -3,11 +3,12 @@
 }
 
 .menu{
-    /* display: inline-block; */
+    /* display: inline; */
     /* border: 2px solid skyblue; */
 }
 
 .item{
+    /* display: inline; */
     border: 1px solid violet;
     padding: 10px;
     margin: 20px;
